PyMaker/datas/object2/RawHTML/i9201/Python_DOC_referPages.how-declare-type-of-dict-containing-classes.txt
<div class="post-text" itemprop="text">
<p>I'm tring to declare type of following function parameter with <code>typing</code> module:</p>
<pre><code>import typing


class A(object):
    pass

class B(A):
    pass

class C(B):
    pass

def my_func(p: typing.Dict[A, str]) -&gt; None:
    pass

my_func({C: 'foo'})
</code></pre>
<p><code>p</code> parameter of <code>my_func</code> must be <code>dict</code> with childclass of <code>A</code> as key and <code>str</code> as value. Actual notation fail with <code>mypy</code> check:</p>
<blockquote>
<p>example.py:17: error: List item 0 has incompatible type "Tuple[C, str]"</p>
</blockquote>
<p>How to declare type of <code>p</code> with typing ?</p>
</div>
<div class="post-text" itemprop="text">
<p>The code is using the class <code>C</code> itself as a key, not an instance of the <code>C</code>.</p>
<pre><code>my_func({C: 'foo'})
</code></pre>
<p>Passing the instance of C class should be fine.</p>
<pre><code>my_func({C(): 'foo'})
         ^^^--- instance, not a class itself
</code></pre>
<hr/>
<p>If you really need to pass the class itself (I doubt it), you need to use <a href="https://docs.python.org/3/library/typing.html#typing.Type" rel="nofollow noreferrer"><code>typing.Type</code></a>:</p>
<pre><code>typing.Dict[typing.Type[A], str]
            ^^^^^^^^^^^^^^
</code></pre>
</div>
<span class="comment-copy">Thank's. Note: i really need to pass the class itself.</span>
